應收帳款對帳/製物工單/到貨狀況
1.新增應收帳款對帳功能
2.調整製物工單-統計,人員條件
3.到貨狀況新增庫別(上海)
4.加入Select PDF元件,
有驗證的網站產生PDF無法使用API,要使用元件的方式.

--- a/Web.config
+++ b/Web.config
@@ -31,6 +31,8 @@
     <add key="FTP_Url" value="ftp://localhost/"/>
     <!--\\PKRC9\PKResource\-->
     <add key="FTP_DiskUrl" value="D:\_ftpTemp\"/>
+    <!-- Select PDF 元件金鑰 -->
+    <add key="PDF_Key" value="ZE9VRFZRVURdVERVUkpURFdVSlVWSl1dXV0=" />
     
     <!-- UnobtrusiveValidation功能移除 -->
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
