集團報價&出貨明細(內銷)
集團報價=新開發
出貨明細(內銷)新增需求#15-20201215-0005

--- a/Web.config
+++ b/Web.config
@@ -22,6 +22,7 @@
     <add key="dbCon_EFGP" value="server=PKDB\PKSQL;database=EFGP;uid=efsql;pwd=EfSql!2#;"/>
     <add key="dbCon_Report" value="server=localhost;database=ReportCenter;uid=sa;pwd=piggy;"/>
     <add key="dbCon_PKExcel" value="server=localhost;database=PKExcel;uid=sa;pwd=piggy;"/>
+    <add key="dbCon_ClickLog" value="server=localhost;database=PKClickLog;uid=sa;pwd=piggy;"/>
     <!-- ** 系統Email ** -->
     <add key="SysMail_Sender" value="pkmailman@mail.prokits.com.tw"/>
     <!-- FTP參數設定 -->
